<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/titles"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/titles_fragment_name" />
        <item
            android:id="@+id/search_by_actor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/search_by_actor_fragment_name" />
        <item
            android:id="@+id/add_movie"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_movie_fragment_name" />
        <item
            android:id="@+id/about_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about_help_fragment_name" />
    </group>

</menu>
